--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+runtipi-docker-service (4.5.3) trixie; urgency=medium
+
+  * Update to Runtipi v4.5.3
+
+ -- Hat Labs CI <info@hatlabs.fi>  Sat, 25 Oct 2025 21:38:50 +0000
+
 runtipi-docker-service (4.5.2) trixie; urgency=medium
 
   * Update to Runtipi v4.5.2
