--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+runtipi-docker-service (4.5.5) trixie; urgency=medium
+
+  * Update to Runtipi v4.5.5
+
+ -- Hat Labs CI <info@hatlabs.fi>  Wed, 29 Oct 2025 02:34:07 +0000
+
 runtipi-docker-service (4.5.3) trixie; urgency=medium
 
   * Update to Runtipi v4.5.3
