--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+runtipi-docker-service (4.6.2) trixie; urgency=medium
+
+  * Update to Runtipi v4.6.2
+
+ -- Hat Labs CI <info@hatlabs.fi>  Tue, 04 Nov 2025 02:33:28 +0000
+
 runtipi-docker-service (4.5.5) trixie; urgency=medium
 
   * Update to Runtipi v4.5.5
