--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+runtipi-docker-service (4.6.3) trixie; urgency=medium
+
+  * Update to Runtipi v4.6.3
+
+ -- Hat Labs CI <info@hatlabs.fi>  Tue, 11 Nov 2025 02:32:31 +0000
+
 runtipi-docker-service (4.6.2) trixie; urgency=medium
 
   * Update to Runtipi v4.6.2
