--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+runtipi-docker-service (4.6.5) trixie; urgency=medium
+
+  * Update to Runtipi v4.6.5
+
+ -- Hat Labs CI <info@hatlabs.fi>  Sat, 22 Nov 2025 02:29:18 +0000
+
 runtipi-docker-service (4.6.4) trixie; urgency=medium
 
   * Update to Runtipi v4.6.4
